discussion/kv_engine/165105/165105_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49207: Set cas on temp items

Change-Id: Iff7b9118f6839b7d7590e189c46c6650385c3dff

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 21:12:53.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 21:31:02.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35304/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35304/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41577/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/vbucket.cc(3825): error C2065: "vb": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41577/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13822/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3825:15: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    v->setCas(vb.nextHLCCas());
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13822/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3528/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3456/ : FAILURE

Compile error at [2021-11-04T21:18:30.763Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3456/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15720/ : FAILURE

Compile error at [2021-11-04T21:25:08.598Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15720/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15437/ : FAILURE

Compile error at [2021-11-04T21:23:25.548Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16405/ : FAILURE

Compile error at [2021-11-04T21:26:02.863Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16405/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14599/ : FAILURE

Compile error at [2021-11-04T21:16:29.354Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14599/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23775/ : FAILURE

Compile error at [2021-11-04T21:29:42.040Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12623/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
